--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="hero" class="hero-section">
             <div class="hero-content">
                 <h1 class="hero-text">
-                    I'm Katie / a professional voice-over artist bringing scripts to life with warmth, clarity & character.
+                    I'm Katie, a professional voice-over artist bringing scripts to life with warmth, clarity & character.
                 </h1>
                 
                 <div class="hero-subtitle">
